# DistributedSystem

./: CMakeLists.txt  toolchain.cmake
Client/src/: CMakeLists.txt  ClientApp.cpp
Server/src/: CMakeLists.txt  ServerApp.cpp  ServerApp.cppp
src/: CMakeLists.txt  ClientApp.cpp  ServerApp.cpp  State.h
